<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/drawerId"
    tools:openDrawer="start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"

    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@drawable/homepage_background">


<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    >



    <Button
        android:id="@+id/Button1Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/button1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/custom_button"

        />
    <Button
        android:id="@+id/Button2Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/button2"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:background="@drawable/custom_button"

        />

    <Button
        android:id="@+id/Button3Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/button3"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:background="@drawable/custom_button"

        />

    <Button
        android:id="@+id/Button4Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/button4"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:background="@drawable/custom_button"

        />

    <Button
        android:id="@+id/Button5Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/button5"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:background="@drawable/custom_button"

        />

    <Button
        android:id="@+id/Button6Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/button6"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:background="@drawable/custom_button"

        />
    <Button
    android:id="@+id/Button7Id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:text="@string/button7"
    android:textSize="20sp"
    android:layout_marginTop="10dp"
    android:textStyle="bold"
    android:background="@drawable/custom_button"

    />

    <Button
        android:id="@+id/Button8Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/button8"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:background="@drawable/custom_button"

        />
    <Button
        android:id="@+id/Button9Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/button9"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:background="@drawable/custom_button"

        />
    <Button
        android:id="@+id/Button10Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/button10"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:background="@drawable/custom_button"

        />
    <Button
        android:id="@+id/Button11Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/button11"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:background="@drawable/custom_button"

        />

    <Button
        android:id="@+id/Button12Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/button12"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:background="@drawable/custom_button"

        />

    <Button
        android:id="@+id/Button13Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/button13"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:background="@drawable/custom_button"

        />

</LinearLayout>
</ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationId"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        app:menu="@menu/nav_menu_layout"
        app:headerLayout="@layout/nav_header"


        android:layout_gravity="start"


        />

</androidx.drawerlayout.widget.DrawerLayout>
